added github image and changed background , fixed center container

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<a href="https://github.com/sridharsomasani/SemanticSearch" target="_blank">Automatic Key Phrase Extraction and Semantic Search </a>
 							<div>
 								<a href="https://github.com/sridharsomasani/SemanticSearch" target="_blank">
-									<img src="images/github_mark.png" alt="Link to GitHub" class="github-mark">
+									<img src="images/github_mark_light.png" alt="Link to GitHub" class="github-mark">
 								</a>
 							</div>
 						</div>
@@ -183,7 +183,7 @@
 							<a href="https://github.com/sridharsomasani/OutdoorBuddies" target="_blank">Outdoor Buddies </a>
 							<div>
 								<a href="https://github.com/sridharsomasani/OutdoorBuddies" target="_blank">
-									<img src="images/github_mark.png" alt="Link to GitHub" class="github-mark">
+									<img src="images/github_mark_light.png" alt="Link to GitHub" class="github-mark">
 								</a>
 							</div>
 						</div>
@@ -208,7 +208,7 @@
 							<a href="https://github.com/sridharsomasani/RESeED" target="_blank">Parallel Regular Expression Search </a>
 							<div>
 								<a href="https://github.com/sridharsomasani/RESeED" target="_blank">
-									<img src="images/github_mark.png" alt="Link to GitHub" class="github-mark">
+									<img src="images/github_mark_light.png" alt="Link to GitHub" class="github-mark">
 								</a>
 							</div>
 						</div>
