--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/portfolio.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body data-spy="scroll" data-target="#navbar-container" data-offset="100">
 	<header>
@@ -29,7 +30,6 @@
 						<li><a href="#education">Education</a></li>
 						<li><a href="#work">Work</a></li>
 						<!-- <li><a href="#skills">Skills</a></li> -->
-						<!-- <li class="hidden-md hidden-sm"><a href="#awards">Awards</a></li> -->
 						<li class=""><a href="#contact">Contact</a></li>
 					</ul>
 				</div>
@@ -39,9 +39,9 @@
 
 	</header>
 
-	<section>
-		<div class="jumbotron cover-image" id="cover-image">
-			<div class="container pattern-overlay">
+	<section id="cover-image">
+		<div class="jumbotron cover-image">
+			<div class="container cover-overlay">
 				<div class="cover-text">Hello, I'm Sridhar Somasani</div>
 			</div>
 		</div>
@@ -49,8 +49,8 @@
 	
 	<section class="content">
 
-		<section>
-			<div class="container" id="aboutme">
+		<section id="aboutme">
+			<div class="container">
 				<div class="page-header">
 					<h3>About Me</h3>
 				</div>
@@ -59,15 +59,16 @@
 					</p>
 					
 					<p class="desc">
-						I am pursuing Master's in Computer Science at University of Louisiana at Lafayette and I will be graduating in Dec 2015. At the moment I work as an Intern at <a href="http://enquero.com/" target="_blank"> Enquero Inc</a> based in Lafayette, LA. 
+						I have graduated from University of Louisiana at Lafayette with Master's in Computer Science in Dec 2015. At the moment I work as an Intern at <a href="http://enquero.com/" target="_blank"> Enquero Inc</a> based in Lafayette, LA. 
 					</p>
 
 				</div>
 			</div>
 		</section>
 
-		<section>
-			<div class="container" id="education">
+		<section id="education" class="parallax">
+		<div class="overlay">
+			<div class="container">
 				<div class="page-header">
 					<h3>Education</h3>
 				</div>
@@ -83,13 +84,15 @@
 				<div class="wrapper clearfix">
 					<div class="col-md-3 year">	2008 - 2012	</div>
 					<div class="col-md-8 col-md-offset-1 desc">
-						<div><a href="http://cvr.ac.in/home4/" target="_blank"> Jawaharlal Nehru Technological University </a></div>
-						<div>Bachelor of Technology - Computer Science & Engineering</div> 
+						<p><a href="http://cvr.ac.in/home4/" target="_blank"> Jawaharlal Nehru Technological University </a></p>
+						<p>Bachelor of Technology - Computer Science & Engineering</p> 
 						<!-- <div>Computer Science and Engineering</div> -->
 					</div>
 				</div>
 			</div>
+		</div>
 		</section>
+
 
 		<section id="work">
 			<div class="container" id="experience">
@@ -147,7 +150,7 @@
 					<div class="col-md-8 col-md-offset-1 desc">
 						<div>Associate Software Engineer</div>
 						<div><a href="http://maqsoftware.com/" target="_blank"> MAQ Software</a>, Hyderabad, India</div> 
-						<p>As a Associate Software Engineer, my responsibilities include writing comlex sql queries, 
+						<p>As a Associate Software Engineer, my responsibilities include writing complex sql queries, 
 							pulling data from various heterogeneous sources to build datamarts and monitoring sql jobs. Furthermore, I developed 
 							dashboards using processed data from datamarts, extending web services according to business needs and embeded charting controls.
 						</p>
@@ -155,16 +158,15 @@
 				</div>
 			</div>
 		</section>
-		<section id="projects">	
+
+		<section id="projects" class="parallax">
+		<div class="overlay">
 			<div class="container" >
 				<div class="page-header">
 					<h3> Projects </h3>
 				</div>
 
-
-
 				<!-- start projects carousel -->
-
 
 				<div class="carousel slide" data-ride="carousel" id="carousel-projects" data-interval="6000">
 					<ol class="carousel-indicators">
@@ -185,7 +187,7 @@
 							  also topic based results irrespective of the vocabulary used in the text documents.
 							</p>
 							<div class="carousel-caption">
-								<a href="https://github.com/sridharsomasani/SemanticSearch" target="_blank">View on GitHub</a>
+								<a href="https://github.com/sridharsomasani/SemanticSearch" target="_blank">View on GitHub <img src="images/cat_white.png"></a>
 							</div>
 						</div>
 						<div class="item wrapper">
@@ -198,7 +200,7 @@
 								scheduling an event/ game to rescheduling or canceling the game, is a cake walk with this application.
 							</p>
 							<div class="carousel-caption">
-								<a href="https://github.com/sridharsomasani/OutdoorBuddies" target="_blank">View on GitHub</a>
+								<a href="https://github.com/sridharsomasani/OutdoorBuddies" target="_blank">View on GitHub <img src="images/cat_white.png"></a>
 							</div>
 						</div>
 						<div class="item wrapper">
@@ -210,41 +212,46 @@
 								Map Reduce framework is used to handle big data scale documents and to perform search parallelly.
 							</p>
 							<div class="carousel-caption">
-								<a href="https://github.com/sridharsomasani/RESeED" target="_blank">View on GitHub</a>
+								<a href="https://github.com/sridharsomasani/RESeED" target="_blank">View on GitHub <img src="images/cat_white.png"></a>
 							</div>
 						</div>
 					</div>
 				</div>
 				<!-- end projects carousel -->
 			</div>
-
+		</div>
 		</section>
 
-		<section>
-			<div class="container" id="contact">
+		<section id="contact">
+			<div class="container">
 				<div class="row">
 					<div class="page-header">
-						Get In Touch
+						<h3>Get In Touch</h3>
 					</div>
 
-					<div class="col-sm-6">
-						<p>Contact Me</p>
-						<p>Sridhar Somasani</p>
-						<p>Email: sridhar.somasani@gmail.com</p>
-						<p>Mobile: +1 (610) 751-5373</p>
-					</div>
-					<div class="col-sm-6">
-						<p>Connect With Me</p>
-						<p>LinkedIn</p>
-						<p>Facebook</p>
-						<p>Twitter</p>
-					</div>
-					
+					<div class="clearfix">
+						<div class="col-sm-4 text-center">
+							<a href="mailto:sridhar.somasani@gmail.com"><i class="fa fa-envelope-square fa-3x"></i></a>
+							<p>sridhar.somasani@gmail.com</p>
+						</div>
+						<div class="col-md-4 col-sm-4 text-center">
+							<a href="tel:+1-610-751-5373"><i class="fa fa-phone-square fa-3x"></i></a>
+							<p>+1 (610) 751 5373</p>
+						</div>
+						<div class="col-md-4 col-sm-4 text-center">
+							<a href="https://www.linkedin.com/in/sridhar216" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i> </a>
+							<a href="https://www.facebook.com/sridhar.somasani" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a>
+							<a href="https://twitter.com/sridhar621" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
+							<a href="https://github.com/sridharsomasani" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+							<!-- <p class="text-center">All Rights Reserved © 2016</p> -->
+						</div>
+					</div>	
 				</div>
+
 			</div>
 		</section>
 		<footer>
-			<div class="container" style="text-align: center">Copyrights Reserved @ 2016</div>
+			<div class="container text-center">All Rights Reserved © 2016</div>
 		</footer>
 	</section>	
 	<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
