--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 						</div>
 						<div class="col-md-4 col-sm-4 text-center">
 							<a href="https://www.linkedin.com/in/sridhar216" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i> </a>
-							<a href="https://www.facebook.com/sridhar.somasani" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a>
+							<!-- <a href="https://www.facebook.com/sridhar.somasani" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a> -->
 							<a href="https://twitter.com/sridhar621" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
 							<a href="https://github.com/sridharsomasani" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
 							<!-- <p class="text-center">All Rights Reserved © 2016</p> -->
