Updated KPIT transition and work experience

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 					<h3>About Me</h3>
 				</div>
 				<div class="wrapper">
-					<p class="desc">My name is Sridhar Somasani. I am a Software Engineer, born in India, working in United States of America. I love to write beautiful code and I believe coding is a way to express your thoughts in a techie style (its an art!). I am an adventurous person, quick learner and I love exploring new things. One of the greatest things about adventure is its impact on you. After each adventure, I keep thinking "what else am I capable of?" and this thought helps me to explore and improve myself both personally and professionally.
+					<p class="desc">My name is Sridhar Somasani. I am a Software Engineer, born in India, working in United States of America. I love to write beautiful code and I believe coding is a way to express your thoughts in a techie style (its an art!). I am an adventurous person, quick learner and I love exploring new things. It is evident from the diversity of technologies on my resume and I learnt all of them by myself(Incase if you are wondering how I did that, I have a magical search box called Google!).
 					</p>
 					
 					<p class="desc">
-						I have graduated from University of Louisiana at Lafayette with Master's in Computer Science in Dec 2015. At the moment I work as an Intern at <a href="http://enquero.com/" target="_blank"> Enquero Inc</a> based in Lafayette, LA. 
+						I have graduated from University of Louisiana at Lafayette with Master's in Computer Science in Dec 2015. At the moment I work as a Functional Consultant at <a href="http://www.kpit.com/" target="_blank"> KPIT</a> based in Lafayette, LA. 
 					</p>
 
 				</div>
@@ -79,6 +79,7 @@
 						<p><a href="http://www.louisiana.edu/" target="_blank"> University of Louisiana at Lafayette </a></p>
 						<p>Master of Science - Computer Science </p>
 						<p>Graduate Research Assistant - Tuition Weaver Holder</p>
+						<p>GPA: 3.9/4.0</p>
 					</div>
 				</div>
 				<div class="wrapper clearfix">
@@ -86,6 +87,7 @@
 					<div class="col-md-8 col-md-offset-1 desc">
 						<p><a href="http://cvr.ac.in/home4/" target="_blank"> Jawaharlal Nehru Technological University </a></p>
 						<p>Bachelor of Technology - Computer Science & Engineering</p> 
+						<p>GPA: 3.5/4.0</p>
 						<!-- <div>Computer Science and Engineering</div> -->
 					</div>
 				</div>
@@ -103,15 +105,20 @@
 				<div class="wrapper clearfix">
 					<div class="col-md-3 year">	Jun 2015 - Present</div>
 					<div class="col-md-8 col-md-offset-1 desc">
-						<div>BI Intern</div>
-						<div><a href="http://enquero.com/" target="_blank"> Enquero Inc</a>, Lafayette, LA, USA</div> 
-						<p>My team developed an integration solution to achieve automated posting of medical device metadata from Oracle Fusion to 
+						<div>Functional Consultant</div>
+						<div><a href="http://www.kpit.com/" target="_blank"> KPIT</a>, Lafayette, LA, USA</div> 
+						<div>Associate Consultant at Enquero Inc (Jan 2016 - Jul 2016)</div>
+						<div>Intern at Enquero Inc (Jun 2015 - Dec 2015)</div>
+						<p>We are team of 3, developed an end-to-end integration solution to publish medical device data from Oracle Product Hub Cloud to 
 						<a href="http://www.fda.gov/MedicalDevices/DeviceRegulationandGuidance/UniqueDeviceIdentification/"> FDA Global Unique Device
-						Identification Database</a>. We used AS2 protocol to securely post the medical device data to 
-						<a href="http://www.fda.gov/ForIndustry/ElectronicSubmissionsGateway/"> FDA Electronic Submission Gateway</a>. We parsed XML 
-						data from Oracle Fusion Product Hub to transform to HL7 SPL XML format as specified by the <a href="http://www.fda.gov/">FDA</a>. 
+						Identification Database</a>. <br\>
+						My responsibilities in the team mainly deals with the design and implementation of integration solution in Java, as I have experience
+						in building applications in it. We customized and deployed open-source AS2 server to integrate with our solution. We used AS2 protocol 
+						to securely publish medical device data to <a href="http://www.fda.gov/ForIndustry/ElectronicSubmissionsGateway/"> FDA Electronic Submission Gateway</a>. 
+						We parsed XML data from Oracle Product Hub Cloud to transform to HL7 SPL XML format as specified by the <a href="http://www.fda.gov/">FDA</a>. 
 						I also worked on Oracle Enterprise Data Quality for Master Data Management and Oracle Fusion Product Hub.
 						</p>
+						<p>PS: Enquero is a partner with KPIT and I recently transitioned to KPIT.</p>
 					</div>
 				</div>
 				<div class="wrapper clearfix">
