--- a/index.html
+++ b/index.html
@@ -108,16 +108,22 @@
 						<div>Functional Consultant</div>
 						<div><a href="http://www.kpit.com/" target="_blank"> KPIT</a>, Lafayette, LA, USA</div> 
 						<div>Associate Consultant at Enquero Inc (Jan 2016 - Jul 2016)</div>
-						<div>Intern at Enquero Inc (Jun 2015 - Dec 2015)</div>
+						<div>Intern at Enquero Inc (Jun 2015 - Dec 2015)</div><br>
 						<p>We are team of 3, developed an end-to-end integration solution to publish medical device data from Oracle Product Hub Cloud to 
 						<a href="http://www.fda.gov/MedicalDevices/DeviceRegulationandGuidance/UniqueDeviceIdentification/"> FDA Global Unique Device
-						Identification Database</a>. <br\>
-						My responsibilities in the team mainly deals with the design and implementation of integration solution in Java, as I have experience
-						in building applications in it. We customized and deployed open-source AS2 server to integrate with our solution. We used AS2 protocol 
+						Identification Database</a>. </p>
+						<br>
+						<p>My responsibilities in the team mainly deals with the design and implementation of integration solution in Java, as I have experience
+						in building applications. We customized and deployed open-source AS2 server to integrate with our solution. We used AS2 protocol 
 						to securely publish medical device data to <a href="http://www.fda.gov/ForIndustry/ElectronicSubmissionsGateway/"> FDA Electronic Submission Gateway</a>. 
 						We parsed XML data from Oracle Product Hub Cloud to transform to HL7 SPL XML format as specified by the <a href="http://www.fda.gov/">FDA</a>. 
 						I also worked on Oracle Enterprise Data Quality for Master Data Management and Oracle Fusion Product Hub.
 						</p>
+						<br>
+						<p>I am proud to be part of the team. We completed the solution within 6 months and offered it as a service to clients. Interested to learn more? Take a look at
+						the flyer <a href="https://www.youtube.com/watch?v=QXV6V4FjJmc" target="_blank">here</a> and more details 
+						<a href="http://www.kpit.com/campaign/udi" target="_blank">here</a></p>
+						<br>
 						<p>PS: Enquero is a partner with KPIT and I recently transitioned to KPIT.</p>
 					</div>
 				</div>
