--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						<br>
 						<p>I am proud to be part of the team. We completed the solution within 6 months and offered it as a service to clients. Interested to learn more? Take a look at
 						the flyer <a href="https://www.youtube.com/watch?v=QXV6V4FjJmc" target="_blank">here</a> and more details 
-						<a href="http://www.kpit.com/campaign/udi" target="_blank">here</a></p>
+						<a href="http://www.kpit.com/campaign/udi" target="_blank">here.</a></p>
 						<br>
 						<p>PS: Enquero is a partner with KPIT and I recently transitioned to KPIT.</p>
 					</div>
