Updated dates and links

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					<div class="col-md-3 year">	Dec 2013 - Jul 2014	</div>
 					<div class="col-md-8 col-md-offset-1 desc">
 						<div>Software Consultant</div> 
-						<div><a href="http://www.technogeninc.com/" target="_blank"> Syscom Technologies Inc</a>, Hyderabad, India</div>
+						<div><a href="http://www.focalcxm.com/" target="_blank"> FocalCXM</a>, Hyderabad, India</div>
 						<p>I am part of the team that develops hybrid mobile applications using Sencha Touch framework. I am involved in implementing 
 							offline functionality in the application using Web SQL and sync the offline data with server when data connection is available. 
 							In addition, I developed games from scratch using Unity game engine. I am given an opportunity to design and implement the various 
@@ -163,7 +163,7 @@
 					<div class="col-md-8 col-md-offset-1 desc">
 						<div>Associate Software Engineer</div>
 						<div><a href="http://maqsoftware.com/" target="_blank"> MAQ Software</a>, Hyderabad, India</div> 
-						<p>As a Associate Software Engineer, my responsibilities include writing complex sql queries, 
+						<p>As an Associate Software Engineer, my responsibilities include writing complex sql queries, 
 							pulling data from various heterogeneous sources to build datamarts and monitoring sql jobs. Furthermore, I developed 
 							dashboards using processed data from datamarts, extending web services according to business needs and embeded charting controls.
 						</p>
